-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Index Maintenance
-
Fully Compatible
-
ALL
-
Storage NYC 2018-11-05
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A scalar field is not initialized by the constructor
Defect 105081 (STATIC_C)
Checker UNINIT_CTOR (subcategory none)
File: /src/mongo/db/catalog/index_catalog_impl.cpp
Function mongo::IndexCatalogImpl::IndexBuildBlock::IndexBuildBlock(mongo::OperationContext , mongo::Collection *, mongo::IndexCatalogImpl, const mongo::BSONObj &)
/src/mongo/db/catalog/index_catalog_impl.h, line: 295
Class member declaration for "_inProgress".
bool _inProgress;
/src/mongo/db/catalog/index_catalog_impl.cpp, line: 297
Non-static class member "_inProgress" is not initialized in this constructor nor in any functions that it calls.
}