SERVER-37666 remove unused field from IndexBuildBlock

The last reference to this field was removed in commit 9134f4c4f376dc60a389b0d7f385802a49867bbe.