src/mongo/db/catalog/index_catalog_impl.h
@@ -294,7 +294,6 @@ public:
         std::string _indexNamespace;
 
         IndexCatalogEntry* _entry;
-        bool _inProgress;
 
         OperationContext* _opCtx;
     };
